@@ -2,261 +2,89 @@ package com.online_e_learning.virtualPathshala.controller;
 
 import com.online_e_learning.virtualPathshala.converter.CourseConverter;
 import com.online_e_learning.virtualPathshala.model.Course;
+import com.online_e_learning.virtualPathshala.model.User;
 import com.online_e_learning.virtualPathshala.repository.CourseRepository;
+import com.online_e_learning.virtualPathshala.repository.UserRepository;
 import com.online_e_learning.virtualPathshala.requestDto.CourseRequestDto;
-import com.online_e_learning.virtualPathshala.service.CourseService;
+import com.online_e_learning.virtualPathshala.responseDto.ApiResponse;
+import com.online_e_learning.virtualPathshala.responseDto.CourseResponseDto;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/courses")
-@CrossOrigin(origins = "*")
+//@CrossOrigin(origins = "http://localhost:3000")
 public class CourseController {
-
-    @Autowired
-    private CourseService courseService;
-
-    @Autowired
-    private CourseConverter courseConverter;
 
     @Autowired
     private CourseRepository courseRepository;
 
-    // CREATE - POST /api/courses
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private CourseConverter courseConverter;
+
+    // CREATE COURSE - POST http://localhost:8040/api/courses
     @PostMapping
-    public ResponseEntity<?> createCourse(@RequestBody CourseRequestDto requestDto) {
+    public ResponseEntity<?> createCourse(@RequestBody CourseRequestDto courseRequestDto) {
         try {
-            Course course = courseService.createCourse(requestDto);
-            CourseRequestDto response = courseConverter.convertToResponseDto(course);
+            System.out.println("✅ Course Controller reached! Creating course: " + courseRequestDto.getTitle());
 
-            Map<String, Object> responseBody = new HashMap<>();
-            responseBody.put("success", true);
-            responseBody.put("message", "Course created successfully");
-            responseBody.put("data", response);
-            responseBody.put("courseId", course.getId());
-            return new ResponseEntity<>(responseBody, HttpStatus.CREATED);
+            // Check if teacher exists
+            Optional<User> teacherOptional = userRepository.findById(courseRequestDto.getTeacherId());
+            if (teacherOptional.isEmpty()) {
+                return ResponseEntity.badRequest()
+                        .body(new ApiResponse<>(false, "Teacher not found with ID: " + courseRequestDto.getTeacherId()));
+            }
+
+            // Check if course code already exists
+            if (courseRequestDto.getCode() != null && courseRepository.existsByCode(courseRequestDto.getCode())) {
+                return ResponseEntity.badRequest()
+                        .body(new ApiResponse<>(false, "Course with code " + courseRequestDto.getCode() + " already exists"));
+            }
+
+            User teacher = teacherOptional.get();
+            Course course = courseConverter.courseRequestDtoToCourse(courseRequestDto, teacher);
+            Course savedCourse = courseRepository.save(course);
+            CourseResponseDto responseDto = courseConverter.courseToCourseResponseDto(savedCourse);
+
+            return ResponseEntity.ok(new ApiResponse<>(true, "Course created successfully", responseDto));
+
         } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ApiResponse<>(false, "Error creating course: " + e.getMessage()));
         }
     }
 
-    // READ ALL - GET /api/courses (with pagination)
-    @GetMapping
-    public ResponseEntity<?> getAllCourses(
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size) {
+    // GET COURSES BY TEACHER - GET http://localhost:8040/api/courses/user/1
+    @GetMapping("/user/{teacherId}")
+    public ResponseEntity<?> getCoursesByTeacher(@PathVariable int teacherId) {
         try {
-            Pageable pageable = PageRequest.of(page, size);
-            Page<Course> coursePage = courseRepository.findAll(pageable);
+            System.out.println("✅ Fetching courses for teacher ID: " + teacherId);
 
-            List<CourseRequestDto> courseDtos = coursePage.getContent().stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
+            List<Course> courses = courseRepository.findByUserId(teacherId);
+            List<CourseResponseDto> responseDtos = courses.stream()
+                    .map(courseConverter::courseToCourseResponseDto)
+                    .toList();
 
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("currentPage", coursePage.getNumber());
-            response.put("totalItems", coursePage.getTotalElements());
-            response.put("totalPages", coursePage.getTotalPages());
-            response.put("pageSize", coursePage.getSize());
-
-            return new ResponseEntity<>(response, HttpStatus.OK);
-
+            return ResponseEntity.ok(new ApiResponse<>(true, "Courses retrieved successfully", responseDtos));
         } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ApiResponse<>(false, "Error retrieving courses: " + e.getMessage()));
         }
     }
 
-
-    // READ BY ID - GET /api/courses/{id}
-    @GetMapping("/{id}")
-    public ResponseEntity<?> getCourseById(@PathVariable int id) {
-        try {
-            Course course = courseService.getCourseById(id);
-            CourseRequestDto response = courseConverter.convertToResponseDto(course);
-
-            Map<String, Object> responseBody = new HashMap<>();
-            responseBody.put("success", true);
-            responseBody.put("data", response);
-            return new ResponseEntity<>(responseBody, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
-        }
-    }
-
-    // READ BY USER ID - GET /api/courses/user/{userId}
-    @GetMapping("/user/{userId}")
-    public ResponseEntity<?> getCoursesByUserId(@PathVariable int userId) {
-        try {
-            List<Course> courses = courseService.getCoursesByUserId(userId);
-            List<CourseRequestDto> courseDtos = courses.stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("count", courseDtos.size());
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
-        }
-    }
-
-    // READ BY CATEGORY - GET /api/courses/category/{category}
-    @GetMapping("/category/{category}")
-    public ResponseEntity<?> getCoursesByCategory(@PathVariable String category) {
-        try {
-            List<Course> courses = courseService.getCoursesByCategory(category);
-            List<CourseRequestDto> courseDtos = courses.stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("count", courseDtos.size());
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-    }
-
-    // READ BY STATUS - GET /api/courses/status/{status}
-    @GetMapping("/status/{status}")
-    public ResponseEntity<?> getCoursesByStatus(@PathVariable String status) {
-        try {
-            List<Course> courses = courseService.getCoursesByStatus(status);
-            List<CourseRequestDto> courseDtos = courses.stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("count", courseDtos.size());
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-    }
-
-    // UPDATE - PUT /api/courses/{id}
-    @PutMapping("/{id}")
-    public ResponseEntity<?> updateCourse(@PathVariable int id, @RequestBody CourseRequestDto requestDto) {
-        try {
-            Course course = courseService.updateCourse(id, requestDto);
-            CourseRequestDto response = courseConverter.convertToResponseDto(course);
-
-            Map<String, Object> responseBody = new HashMap<>();
-            responseBody.put("success", true);
-            responseBody.put("message", "Course updated successfully");
-            responseBody.put("data", response);
-            return new ResponseEntity<>(responseBody, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    // DELETE - DELETE /api/courses/{id}
-    @DeleteMapping("/{id}")
-    public ResponseEntity<?> deleteCourse(@PathVariable int id) {
-        try {
-            courseService.deleteCourse(id);
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("message", "Course deleted successfully");
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
-        }
-    }
-
-    // SEARCH COURSES - GET /api/courses/search
-    @GetMapping("/search")
-    public ResponseEntity<?> searchCourses(
-            @RequestParam(required = false) String query,
-            @RequestParam(required = false) String category,
-            @RequestParam(required = false) String status) {
-        try {
-            List<Course> courses = courseService.searchCourses(query, category, status);
-            List<CourseRequestDto> courseDtos = courses.stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("count", courseDtos.size());
-            response.put("filters", Map.of(
-                    "query", query,
-                    "category", category,
-                    "status", status
-            ));
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-    }
-
-    // FEATURED COURSES - GET /api/courses/featured
-    @GetMapping("/featured")
-    public ResponseEntity<?> getFeaturedCourses() {
-        try {
-            List<Course> courses = courseService.getFeaturedCourses();
-            List<CourseRequestDto> courseDtos = courses.stream()
-                    .map(courseConverter::convertToResponseDto)
-                    .collect(Collectors.toList());
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("data", courseDtos);
-            response.put("count", courseDtos.size());
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        } catch (Exception e) {
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put("success", "false");
-            errorResponse.put("error", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+    // TEST ENDPOINT - DIFFERENT URL PE RAKHO
+    @GetMapping("/test")
+    public String testEndpoint() {
+        return "✅ Course Controller is working!";
     }
 }
